--- a/src/app/layouts/main-layout/main-layout.component.html
+++ b/src/app/layouts/main-layout/main-layout.component.html
@@ -1,5 +1,5 @@
 <div class="main">
-    <app-nav-menu></app-nav-menu>
+    <app-nav-menu class="nav-menu"></app-nav-menu>
     <div class="content">
         <app-nav-header class="header" [title]="title" [breadcrumbs]="breadcrumbs"></app-nav-header>
         <router-outlet></router-outlet>
