--- a/src/app/components/nav-header/nav-header.component.html
+++ b/src/app/components/nav-header/nav-header.component.html
@@ -1,7 +1,11 @@
 <div class="header">
+    <div class="mobile-back">
+        <button class="back-button" *ngIf="showBackButton()" (click)="goBack()">
+            <i class="mdi mdi-chevron-left text-peach"></i>
+        </button>
+    </div>
     <div class="title-bar">
         <h1 class="title">{{title}}</h1>
-
         <div class="wallet-connector">
             <div class="connect-wallet" *ngIf="!isConnected">
                 <button class="btn-alt" (click)="connectWallet()">
