--- a/src/app/components/nav-header/nav-header.component.scss
+++ b/src/app/components/nav-header/nav-header.component.scss
@@ -1,6 +1,10 @@
 @import '_imports';
 
 .header {
+    .mobile-back {
+        display: none;
+    }
+
     .title-bar {
         display: flex;
         align-items: center;
@@ -56,6 +60,7 @@
         margin-bottom: 20px;
         height: 40px;
         box-sizing: border-box;
+
         ul {
             padding: 0;
             margin: 0;
@@ -70,6 +75,79 @@
                     font-weight: 700;
                 }
             }
+        }
+    }
+}
+
+@media (max-width: 575px) {
+    .header {
+        margin-top: 40px;
+        display: flex;
+        align-items: center;
+
+        .mobile-back {
+            display: block;
+
+            .back-button {
+                min-width: auto;
+                padding: 0;
+                
+                background: $white;
+                box-shadow: 0px 3px 7.5px 0px #3E1B070D;
+                width: 24px;
+                height: 24px;
+                border-radius: 24px;
+
+                i {
+                    font-size: 23px;
+                    line-height: 24px;
+                }
+            }
+        }
+        .title-bar {
+            margin: 0;
+            flex-grow: 1;
+
+            .title {
+                display: none;
+            }
+
+            .wallet-connector {    
+                .connect-wallet {
+                    i.spinner {
+                        font-size: 16px;
+                    }
+
+                    .btn-alt {
+                        padding: 5px;
+                    }
+                }
+    
+                .accounts {
+    
+                    i.wallet-icon {
+                        width: 24px;
+                        height: 24px;
+                        line-height: 24px;
+    
+                        svg {
+                            margin-top: 3px;
+                            width: 18px;
+                            height: 18px;
+                        }
+                    }
+    
+                    .wallet-address {
+                        font-size: 14px;
+                        font-weight: 500;
+                        color: $peach;
+                    }
+                }
+            }
+        }
+
+        .nav-bar {
+            display: none;
         }
     }
 }
