--- a/src/app/layouts/main-layout/main-layout.component.scss
+++ b/src/app/layouts/main-layout/main-layout.component.scss
@@ -14,3 +14,22 @@
         box-sizing: border-box;
     }
 }
+
+@media (max-width: 575px) {
+    .main {
+        flex-direction: column;
+        flex-flow: column-reverse;
+
+        .nav-menu {
+
+        }
+
+        .content {
+            height: calc(100vh - 60px);
+            overflow-y: auto;
+
+            padding-left: 10px;
+            padding-right: 10px;
+        }
+    }
+}
