--- a/src/app/pages/client/main/main.component.html
+++ b/src/app/pages/client/main/main.component.html
@@ -10,8 +10,7 @@
                 <!-- <div class="label w-15">Valid until</div> -->
                 <div class="label w-30"></div>
             </div>
-            <div class="credential" *ngFor="let issuer of issuedCredentials"
-                [ngClass]="issuer.expanded ? 'expanded' : ''">
+            <div class="credential" *ngFor="let issuer of issuedCredentials" [ngClass]="issuer.expanded ? 'expanded' : ''">
                 <div class="credential-header">
                     <div class="w-5">
                         <span class="cred-arrow" [ngClass]="issuer.expanded ? 'expanded' : ''" (click)="expand(issuer)">
@@ -20,9 +19,7 @@
                     </div>
                     <div class="w-25">
                         <span (click)="showIssuerModal(issuer)" class="issuer-label">
-                            <img src="{{getFaviconUrl(issuer.issuer)}}" width="16" height="16" /> {{issuer.label}} <span
-                                *ngIf="!issuerHasDecryptPending(issuer)" class="pill text-success"><i
-                                    class="mdi mdi-lock-open-check text-peach"></i></span>
+                            <img src="{{getFaviconUrl(issuer.issuer)}}" width="16" height="16" /> {{issuer.label}} <span *ngIf="!issuerHasDecryptPending(issuer)" class="pill text-success"><i class="mdi mdi-lock-open-check text-peach"></i></span>
                         </span>
                     </div>
                     <div class="w-25">{{issuer.type.join(', ')}}</div>
@@ -32,21 +29,17 @@
                         <span *ngIf="!issuer.datevaliduntil"><i class="mdi mdi-infinity"></i></span>
                     </div> -->
                     <div class="w-30">
-                        <app-multi-button btnSize="btn-xs" [buttons]="getActionMenuButtons(issuer)"
-                            (buttonClick)="issuerActionClick($event, issuer)"></app-multi-button>
+                        <app-multi-button btnSize="btn-xs" [buttons]="getActionMenuButtons(issuer)" (buttonClick)="issuerActionClick($event, issuer)"></app-multi-button>
                         <!-- <button class="btn-xs" (click)="decryptCredential(issuer)" *ngIf="issuerHasDecryptPending(issuer)">
                             <span *ngIf="!issuer.isDecrypting"><i class="mdi mdi-lock"></i> Decrypt</span>
                             <span *ngIf="issuer.isDecrypting"><i class="mdi mdi-loading rotate-mdi"></i> Waiting for
                                 Metamask</span>
                         </button> -->
-                        <a href="#" (click)="deleteCredentialPrompt(issuer)" class="btn btn-lg" title="Remove Credential"><i
-                                class="btn-icon"><i class="mdi mdi-delete"></i></i></a>
+                        <a href="#" (click)="deleteCredentialPrompt(issuer)" class="btn btn-lg" title="Remove Credential"><i class="btn-icon"><i class="mdi mdi-delete"></i></i></a>
                     </div>
                 </div>
-                <div class="credential-expanded"
-                    *ngIf="issuer.expanded && credentialDetailLookup[issuer.wideInternalId]?.credentials">
-                    <div class="credential-property"
-                        *ngFor="let cred of credentialDetailLookup[issuer.wideInternalId]?.credentials">
+                <div class="credential-expanded" *ngIf="issuer.expanded && credentialDetailLookup[issuer.wideInternalId]?.credentials">
+                    <div class="credential-property" *ngFor="let cred of credentialDetailLookup[issuer.wideInternalId]?.credentials">
                         <div class="w-5"></div>
                         <div class="w-25">{{cred.name}}</div>
                         <div class="w-70" *ngIf="cred.status == 2">
@@ -64,18 +57,88 @@
                         </div>
                         <div class="w-70" *ngIf="!cred.status || cred.status < 2">
                             <button class="btn-xs" (click)="decryptProperty(cred)">
-                                <span *ngIf="!cred.isDecrypting && (cred.status == 0 || !cred.status)"><i
-                                        class="mdi mdi-lock"></i>
+                                <span *ngIf="!cred.isDecrypting && (cred.status == 0 || !cred.status)"><i class="mdi mdi-lock"></i>
                                     Decrypt</span>
-                                <span *ngIf="cred.isDecrypting && cred.status == 1"><i
-                                        class="mdi mdi-loading rotate-mdi"></i> Waiting for Metamask</span>
+                                <span *ngIf="cred.isDecrypting && cred.status == 1"><i class="mdi mdi-loading rotate-mdi"></i> Waiting for Metamask</span>
                             </button>
                         </div>
                     </div>
                 </div>
             </div>
-            <div *ngIf="!getWeb3WalletService().isCheckingMetaMask() && (!issuedCredentials || issuedCredentials.length <= 0)"
-                class="panel-message info">
+            <div class="credential mobile" *ngFor="let issuer of issuedCredentials" [ngClass]="issuer.expanded ? 'expanded' : ''">
+                <div class="credential-header" (click)="expand(issuer)">
+                    <div class="w-15">
+                        <img src="{{getFaviconUrl(issuer.issuer)}}" width="32" height="32" />
+                    </div>
+                    <div class="w-80">
+                        <span class="issuer-label">{{issuer.label}} <span *ngIf="!issuerHasDecryptPending(issuer)" class="pill text-success"><i class="mdi mdi-lock-open-check text-peach"></i></span>
+                        </span>
+                        <span class="issuer">{{issuer.type.join(', ')}}</span>
+                    </div>
+                    <div class="w-5">
+                        <span class="cred-arrow" [ngClass]="issuer.expanded ? 'expanded' : ''">
+                            <img src="/assets/svg/arrow.svg" />
+                        </span>
+                    </div>
+                </div>
+                <div class="credential-expanded" *ngIf="issuer.expanded && credentialDetailLookup[issuer.wideInternalId]?.credentials">
+                    <div class="credential-property">
+                        <label>Label: </label>
+                        <span>{{issuer.label}}</span>
+                    </div>
+                    <div class="credential-property">
+                        <label>Credential Type: </label>
+                        <span>{{issuer.type.join(', ')}}</span>
+                    </div>
+                    <div class="credential-property">
+                        <label>Issuer: </label>
+                        <span>{{issuer.issuer}}</span>
+                    </div>
+                    <div class="credential-property">
+                        <label>Issued On: </label>
+                        <span>{{issuer.issuanceDate | date:'dd-MMM-yyyy HH:mm'}}</span>
+                    </div>
+                    <div class="credential-property">
+                        <h3>Properties</h3>
+                    </div>
+                    <div class="credential-property" *ngFor="let cred of credentialDetailLookup[issuer.wideInternalId]?.credentials">
+                        <div class="w-100" *ngIf="cred.status == 2">
+                            <ng-container *ngIf="getValueType(cred.decryptedValue) as valueType">
+                                <div *ngIf="valueType === 'object'">
+                                    <app-wide-data-object [data]="cred.decryptedValue"></app-wide-data-object>
+                                </div>
+                                <div *ngIf="valueType === 'array'">
+                                    <app-wide-data-object [data]="cred.decryptedValue"></app-wide-data-object>
+                                </div>
+                                <div *ngIf="valueType === 'other'">
+                                    <label>{{cred.name}}: </label> <span>{{cred.decryptedValue}}</span>
+                                </div>
+                            </ng-container>
+                        </div>
+                        <div class="w-100" *ngIf="!cred.status || cred.status < 2">
+                            <button class="btn-xs" (click)="decryptProperty(cred)">
+                                <span *ngIf="!cred.isDecrypting && (cred.status == 0 || !cred.status)"><i class="mdi mdi-lock"></i>
+                                    {{cred.name}}</span>
+                                <span *ngIf="cred.isDecrypting && cred.status == 1"><i class="mdi mdi-loading rotate-mdi"></i> Waiting for Metamask</span>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="credential-property">
+                        <h3>Actions</h3>
+                    </div>
+                    <div class="credential-property">
+                        <button class="btn-xs" (click)="decryptCredential(issuer)">
+                            <i *ngIf="!issuerHasDecryptPending(issuer)" class="mdi mdi-lock-open-check"></i>
+                            <i *ngIf="issuerHasDecryptPending(issuer)" class="mdi mdi-lock"></i>
+                            Decrypt All
+                        </button>
+                    </div>
+                    <div class="credential-property">
+                        <button class="btn-xs" (click)="showWideCredentialPreviewModal(issuer)"><i class="mdi mdi-eye"></i> Preview</button>
+                    </div>
+                </div>
+            </div>
+            <div *ngIf="!getWeb3WalletService().isCheckingMetaMask() && (!issuedCredentials || issuedCredentials.length <= 0)" class="panel-message info">
                 <p class="info"> <i class="mdi mdi-check-circle-outline"></i>Your wallet is connected, but there are no
                     credentials stored with us yet. Click Add Credentials to get started!</p>
             </div>
@@ -83,14 +146,12 @@
         <div *ngIf="getWeb3WalletService().isCheckingMetaMask()" class="panel-message info">
             <p class="info"> <i class="spinner mdi mdi-loading rotate-mdi"></i> Please wait while initialising...</p>
         </div>
-        <div *ngIf="!getWeb3WalletService().isConnectedToWallet() && !getWeb3WalletService().isCheckingMetaMask()"
-            class="panel-message error">
+        <div *ngIf="!getWeb3WalletService().isConnectedToWallet() && !getWeb3WalletService().isCheckingMetaMask()" class="panel-message error">
             <p class="error"> <i class="mdi mdi-alert-circle-outline"></i>Please connect your wallet!</p>
         </div>
     </div>
     <div class="buttons">
-        <button *ngIf="getWeb3WalletService().isConnectedToWallet() && !getWeb3WalletService().isCheckingMetaMask()"
-            (click)="goTo('credentials/add')">Add Credentials</button>
+        <button *ngIf="getWeb3WalletService().isConnectedToWallet() && !getWeb3WalletService().isCheckingMetaMask()" (click)="goTo('credentials/add')">Add Credentials</button>
     </div>
 </div>
 <app-wide-modal [showModal]="showIssuerDetailsModal">
