--- a/src/app/pages/client/main/main.component.scss
+++ b/src/app/pages/client/main/main.component.scss
@@ -12,6 +12,11 @@
         .header,
         .credential-header,
         .credential-property {
+
+            &.mobile {
+                display: none;
+            }
+
             color: $grey-dark;
             display: flex;
             align-items: center;
@@ -27,6 +32,10 @@
 
         .credential {
             border-radius: 10px;
+
+            &.mobile {
+                display: none;
+            }
 
             &.expanded {
                 box-shadow: 0px 3px 8px 0px #3E1B071A;
@@ -129,5 +138,88 @@
         gap: 20px;
         display: flex;
         justify-content: center;
+    }
+}
+
+@media (max-width: 575px) {
+    .main {
+
+        .credentials {
+
+            .header {
+                display: none;
+                &.mobile {
+                    display: flex;
+                }
+            }
+
+            .credential {
+                display: none;
+
+                box-shadow: 0px 3px 8px 0px #3E1B071A;
+
+                padding: 8px 0;
+
+                &.mobile {
+                    display: block;
+                }
+
+                .credential-header {
+                    height: auto;
+                    position: relative;
+
+                    .issuer-label {
+                        font-size: 14px;
+                        top: 3px;
+                        position: relative;
+                        text-wrap: nowrap;
+                        text-overflow: ellipsis;
+                        width: auto;
+                        display: block;
+                        overflow: hidden;
+                    }
+
+                    .issuer {
+                        position: relative;
+                        display: block;
+                        font-size: 12px;
+                        color: $grey-dark;
+                        text-wrap: nowrap;
+                        text-overflow: ellipsis;
+                        width: auto;
+                        display: block;
+                        overflow: hidden;
+                    }
+    
+                }
+
+                .credential-expanded {
+                        
+                    .credential-property {
+                        min-height: 25px;
+
+                        .btn-xs {
+                            width: 100%;
+                            text-align: left;
+                        }
+
+                        label {
+                            font-size: 14px;
+                            font-weight: 600;
+                        }
+
+                        span {
+                            font-size: 14px;
+                            font-weight: 400;
+                            word-wrap: break-word;
+                        }
+
+                        h3 {
+                            margin-bottom: 0;
+                        }
+                    }
+                }
+            }
+        }
     }
 }
