--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,3 +1,3 @@
 /* FONTS */
-@import url('https://fonts.cdnfonts.com/css/glacial-indifference-2');
-@import url('https://fonts.cdnfonts.com/css/inter');
+@import url('https://fonts.cdnfonts.com/css/glacial-indifference-2?styles=54222,54221');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
