--- a/src/app/pages/client/add-credentials/add-credentials.component.scss
+++ b/src/app/pages/client/add-credentials/add-credentials.component.scss
@@ -36,3 +36,11 @@
         }
     }
 }
+
+@media (max-width: 575px) {
+    .credential-panel {
+        .credential-pane {
+            width: 100%;
+        }
+    }
+}
