--- a/src/app/pages/client/integrations/oauth/add/oauth-redirect/oauth-redirect.component.scss
+++ b/src/app/pages/client/integrations/oauth/add/oauth-redirect/oauth-redirect.component.scss
@@ -56,3 +56,21 @@
     margin-bottom: 20px;
 
 }
+
+@media (max-width: 575px) {
+    .buttons {
+        flex-direction: column;
+        button {
+            width: 100%;
+        }
+    }
+
+    .oauth-credentials {
+        max-height: 600px;
+    
+        .scrollable {
+            max-height: inherit;
+            height: 40vh;
+        }
+    }
+}
