--- a/src/app/pages/presentations/begin-presentation/begin-presentation.component.html
+++ b/src/app/pages/presentations/begin-presentation/begin-presentation.component.html
@@ -2,7 +2,7 @@
     <div *ngIf="!pageLoaded">
         Connecting to server to fetch config...
     </div>
-    <div *ngIf="pageLoaded">
+    <div *ngIf="pageLoaded" class="container">
         <div class="logo-wrapper">
             <img class="logo" src="assets/svg/wide_logo_gradient.svg" />
         </div>
