--- a/src/app/pages/presentations/presentation-multi-select/presentation-multi-select.component.scss
+++ b/src/app/pages/presentations/presentation-multi-select/presentation-multi-select.component.scss
@@ -101,3 +101,24 @@
     }
 
 }
+
+@media (max-width: 575px) {
+    .content {
+
+        padding: 0 50px;
+        width: 100%;
+        box-sizing: border-box;
+
+        .logo-wrapper {
+            img {
+                width: 100%;
+            }
+        }
+
+    }
+
+    .buttons,
+    .modal-buttons {
+        flex-direction: column;
+    }
+}
