--- a/src/app/pages/presentations/presentation-request/presentation-request.component.html
+++ b/src/app/pages/presentations/presentation-request/presentation-request.component.html
@@ -1,5 +1,5 @@
 <div class="content">
-    <div class="logo-wrapper">
+    <div class="logo-wrapper logo-wide">
         <img class="logo" src="assets/svg/wide_logo_gradient.svg" />
     </div>
     <h2>Credentials Presentation Request</h2>
