--- a/src/app/components/wide-modal/wide-modal.component.html
+++ b/src/app/components/wide-modal/wide-modal.component.html
@@ -1,5 +1,6 @@
 <div class="modal" *ngIf="showModal">
     <div class="modal-content">
+        <div class="mobile-nub"></div>
         <ng-content select=[content]></ng-content>
         <div class="buttons">
             <ng-content select=[buttons]></ng-content>
