--- a/src/app/components/wide-modal/wide-modal.component.scss
+++ b/src/app/components/wide-modal/wide-modal.component.scss
@@ -6,7 +6,7 @@
     height: 100%;
     top: 0;
     left: 0;
-    background: rgba(0, 0, 0, 0.45); 
+    background: rgba(0, 0, 0, 0.45);
 
     display: flex;
     align-items: center;
@@ -27,5 +27,31 @@
         a {
             color: $brown;
         }
+    }
+}
+
+@media (max-width: 575px) {
+    .modal {
+
+        .modal-content {
+            height: 100%;
+            width: 100%;
+            margin-top: 40px;
+            padding: 0 50px;
+            box-sizing: border-box;
+            border-radius: 15px;
+
+            .mobile-nub{
+                background: #E5D3CC;
+                width: 45px;
+                height: 5px;
+                border-radius: 5px;
+                margin-left: auto;
+                margin-right: auto;
+                margin-top: 10px;
+                margin-bottom: 40px;
+            }
+        }
+
     }
 }
