--- a/src/app/pages/client/main/main.component.scss
+++ b/src/app/pages/client/main/main.component.scss
@@ -217,9 +217,28 @@
                         h3 {
                             margin-bottom: 0;
                         }
+
+                        &.label {
+                            border-bottom: 0;
+                        }
                     }
                 }
             }
+        }
+
+        .buttons {
+            width: 100%;
+            margin: 20px 0;
+            
+            button {
+                width: 100%;
+            }
+        }
+    }
+
+    .delete-credential {
+        .buttons {
+            flex-direction: column;
         }
     }
 }
